Adds content for american, hawaiian, and mexican modals

--- a/index.html
+++ b/index.html
@@ -284,23 +284,24 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/1.jpeg" alt="..." />
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <h2 class="text-uppercase">Red White & Blue Party</h2>
+                                <p class="item-intro text-muted">Classic BBQ</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/american-bbq-modal.jpg" alt="American Barbeque food table" />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/white-glove-bbq-modal.jpg" alt="white glove service of burgers" />
+                                <p>Bringing you that traditional family barbecue feeling straight to your backyard. Complete with festivan lighting and all the fixings.
+                                    From burgers and dogs to briskets and filet, our traditional backyard barbecue will have <em>everyone</em> coming back for seconds.</p>
                                 <ul class="list-inline">
                                     <li>
-                                        <strong>Client:</strong>
-                                        Threads
+                                        <strong>Contact us for package options</strong>
                                     </li>
                                     <li>
-                                        <strong>Category:</strong>
-                                        Illustration
+                                        <strong>Base Price:</strong>
+                                        $29/pp
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                    Close Project
+                                    <span class="p-2">Close</span>
                                 </button>
                             </div>
                         </div>
@@ -319,23 +320,24 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/2.jpeg" alt="..." />
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <h2 class="text-uppercase">Luau Party</h2>
+                                <p class="item-intro text-muted">Hawaiian BBQ</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/hawaiian-skewers-modal.jpg" alt="Hawaiian Skewers" />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/hawaiian-cupcake-modal.jpg" alt="Hawaiian decor table with cupcakes" />
+                                <p>Let's limbo on over to the tiki bar right in your backyard.
+                                    A Maui Wowie style menu of mouthwatering offerings! Your party is sure to flow like lava with this island themed decor and luau festivities. Put on a Lei as we provide you with a Polynesian paradise in your backyard.</p>
                                 <ul class="list-inline">
                                     <li>
-                                        <strong>Client:</strong>
-                                        Explore
+                                        <strong>Contact us for package options</strong>
                                     </li>
                                     <li>
-                                        <strong>Category:</strong>
-                                        Graphic Design
+                                        <strong>Base Price:</strong>
+                                        $29/pp
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                    Close Project
+                                    <span class="p-2">Close</span>
                                 </button>
                             </div>
                         </div>
@@ -354,23 +356,22 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                                <h2 class="text-uppercase">Mexican Fiesta</h2>
+                                <p class="item-intro text-muted">Mexican BBQ</p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpeg" alt="..." />
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <p>Let us take you south of the border for a Mexican Fiesta themed party, that will have you doing the Cha-Cha.With options like pulled pork or shrimp tacos, overloaded nachos and infamous corn salsa. So let's put on some Sombreros , shake your maracas and party while we give you the whole enchilada.</p>
                                 <ul class="list-inline">
                                     <li>
-                                        <strong>Client:</strong>
-                                        Finish
+                                        <strong>Contact us for package options</strong>
                                     </li>
                                     <li>
-                                        <strong>Category:</strong>
-                                        Identity
+                                        <strong>Base Price:</strong>
+                                        $29/pp
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                    Close Project
+                                    <span class="p-2">Close</span>
                                 </button>
                             </div>
                         </div>
@@ -395,17 +396,16 @@
                                 <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                                 <ul class="list-inline">
                                     <li>
-                                        <strong>Client:</strong>
-                                        Lines
+                                        <strong>Contact us for package options</strong>
                                     </li>
                                     <li>
-                                        <strong>Category:</strong>
-                                        Branding
+                                        <strong>Base Price:</strong>
+                                        $29/pp
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                    Close Project
+                                    <span class="p-2">Close</span>
                                 </button>
                             </div>
                         </div>
@@ -463,20 +463,20 @@
                                 <p class="item-intro text-muted">Creating a unique brunch experience tailored to your occasion
                                     There's something for everyone.</p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpeg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpeg" alt="..." />
                                 <p>Whether you are having a get together with the girls, a bash for the Bachelorette, or an intimate gathering. We will put together an eye catching brunch with mouth watering offerings. Sit back and relax, as the constant flow of Prosecco and Bellini grace your gathering while you relax and enjoy.</p>
                                 <ul class="list-inline">
-                                    <li class="text-md-center">
-                                        <strong>Base Cost:</strong>
-                                        $29/pp<span class="text-sm-left">*</span>
+                                    <li>
+                                        <strong>Contact us for package options</strong>
                                     </li>
-                                    <li class="text-sm-center">
-                                        <strong>*</strong>
-                                        <span>price pp varies per customization</span>
+                                    <li>
+                                        <strong>Base Price:</strong>
+                                        $29/pp
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                    Close Project
+                                    <span class="p-2">Close</span>
                                 </button>
                             </div>
                         </div>
