adds more content to modals

--- a/index.html
+++ b/index.html
@@ -390,10 +390,14 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/boho-setup.jpg" alt="..." />
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <h2 class="text-uppercase">Kid's Party</h2>
+                                <p class="item-intro text-muted">Standard BBQ</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/kids-bbq.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/kids-party-modal-char.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/kids-modal.jpg" alt="..." />
+                                <p>Specializing in birthdays, baptisms and graduations.  We have the package that will fill all your needs.  Featuring an extensive range of menu offerings sure to please any picky eater.  </p>
+                                <p>Dazzle the guests with a wide selection of customizable activities.</p>
+                                <p>   We have something for all ages.  What teenager wouldn't love a backyard movie night with their friends!  Kids adore our mystifying magic shows, face painting, balloon animals, and live lovable characters. Unlimited choices of decor and music taylored to compliment your event.</p>
                                 <ul class="list-inline">
                                     <li>
                                         <strong>Contact us for package options</strong>
@@ -424,23 +428,22 @@
                         <div class="col-lg-8">
                             <div class="modal-body">
                                 <!-- Project details-->
-                                <h2 class="text-uppercase">Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/5.jpeg" alt="..." />
-                                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                                <h2 class="text-uppercase">Italian Festa</h2>
+                                <p class="item-intro text-muted">Italian BBQ</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/italian-bbq.jpg" alt="..." />
+                                <p>Sit back and enjoy a feast fit for a Don, cut right from page of San Genaro... With offerings of sausage and peppers , bracciole or ribeye steak with fresh Mozz. Our festa decor will bring that Mulberry Street feel right to your backyard. Finish off the night with fried zeppoles and fresh cannolis while sitting in your fedora.You'll surely be saying "Mama mia"</p>
                                 <ul class="list-inline">
                                     <li>
-                                        <strong>Client:</strong>
-                                        Southwest
+                                        <strong>Contact us for package options</strong>
                                     </li>
                                     <li>
-                                        <strong>Category:</strong>
-                                        Website Design
+                                        <strong>Base Price:</strong>
+                                        $29/pp
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                     <i class="fas fa-xmark me-1"></i>
-                                    Close Project
+                                    <span class="p-2">Close</span>
                                 </button>
                             </div>
                         </div>
