--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 <!--                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>-->
                                 <div class="portfolio-hover-content"><p>Click for more details</p></div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio/italian-bbq.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio/italian-festa.jpg" alt="..." />
                         </a>
                         <div class="portfolio-caption">
                             <div class="portfolio-caption-heading">Italian Festa</div>
@@ -358,8 +358,8 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Mexican Fiesta</h2>
                                 <p class="item-intro text-muted">Mexican BBQ</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/3.jpeg" alt="..." />
-                                <p>Let us take you south of the border for a Mexican Fiesta themed party, that will have you doing the Cha-Cha.With options like pulled pork or shrimp tacos, overloaded nachos and infamous corn salsa. So let's put on some Sombreros , shake your maracas and party while we give you the whole enchilada.</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/mexican-modal.jpg" alt="..." />
+                                <p>Let us take you south of the border with our Mexican Fiesta themed party. This party will have you doing the Cha-Cha with options like pulled pork or shrimp tacos, overloaded nachos and infamous corn salsa.  Put on some Sombreros, shake your maracas and party while we give you the whole enchilada.</p>
                                 <ul class="list-inline">
                                     <li>
                                         <strong>Contact us for package options</strong>
@@ -430,8 +430,10 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Italian Festa</h2>
                                 <p class="item-intro text-muted">Italian BBQ</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/wine-tasting-italian.jpg" alt="..." />
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/italian-bbq.jpg" alt="..." />
-                                <p>Sit back and enjoy a feast fit for a Don, cut right from page of San Genaro... With offerings of sausage and peppers , bracciole or ribeye steak with fresh Mozz. Our festa decor will bring that Mulberry Street feel right to your backyard. Finish off the night with fried zeppoles and fresh cannolis while sitting in your fedora.You'll surely be saying "Mama mia"</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/bracciole.jpg" alt="..." />
+                                <p>Sit back and enjoy a feast fit for a Don! Cut right from a page of San Genaro with offerings of sausage and peppers, bracciole or ribeye steak with fresh "Mutz".  Our festa decor will bring that Mulberry Street feel right to your backyard.  Finish off the night, sitting in your fedora, with fried zeppoles and fresh cannolis.  You'll surely be saying "Mama mia" before the night is over!</p>
                                 <ul class="list-inline">
                                     <li>
                                         <strong>Contact us for package options</strong>
@@ -465,9 +467,9 @@
                                 <h2 class="text-uppercase">Let's do Brunch!</h2>
                                 <p class="item-intro text-muted">Creating a unique brunch experience tailored to your occasion
                                     There's something for everyone.</p>
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpeg" alt="..." />
-                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/6.jpeg" alt="..." />
-                                <p>Whether you are having a get together with the girls, a bash for the Bachelorette, or an intimate gathering. We will put together an eye catching brunch with mouth watering offerings. Sit back and relax, as the constant flow of Prosecco and Bellini grace your gathering while you relax and enjoy.</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/boho-modal.jpg" alt="..." />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/boho-wine-modal.jpg" alt="..." />
+                                <p>Whether you are having a get together with the girls, a bash for the Bachelorette, or an intimate gathering. We will put together an eye-catching brunch with mouth watering offerings. Customize this party with a Boho or vineyard feel right in your backyard.  Just sit back and relax, as the constant flow of Prosecco and Bellini grace your gathering while you relax and enjoy.</p>
                                 <ul class="list-inline">
                                     <li>
                                         <strong>Contact us for package options</strong>
