--- a/index.html
+++ b/index.html
@@ -260,7 +260,12 @@
                 <div class="col-lg-4 mr-auto text-center">
                     <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
                     <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                    <a class="d-block" href="mailto:vdelacuetara@gmail.com">NOT-AOL-EMAIL@NOTaol.com</a>
+                    <a class="d-block" href="mailto:poshparties@gmail.com">poshparties@gmail.com</a>
+                </div>
+                <div class="col-lg-4 mr-auto text-center">
+                    <i class="fab fa-tiktok fa-3x mb-3 text-muted"></i>
+                    <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
+                    <a class="d-block" href="www.tiktok.com/smokinjoesny">smokinjoesny</a>
                 </div>
             </div>
         </div>
