--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <div class="col-lg-4 mr-auto text-center">
                     <i class="fab fa-tiktok fa-3x mb-3 text-muted"></i>
                     <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                    <a class="d-block" href="www.tiktok.com/smokinjoesny">smokinjoesny</a>
+                    <a class="d-block" href=https://www.tiktok.com/@smokinjoesny?is_from_webapp=1&sender_device=pc">smokinjoesny</a>
                 </div>
             </div>
         </div>
