--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                                     </li>
                                     <li>
                                         <strong>Base Price:</strong>
-                                        $29/pp
+                                        $22/pp
                                     </li>
                                 </ul>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -470,8 +470,7 @@
                             <div class="modal-body">
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">Let's do Brunch!</h2>
-                                <p class="item-intro text-muted">Creating a unique brunch experience tailored to your occasion
-                                    There's something for everyone.</p>
+                                <p class="item-intro text-muted">Creating a unique brunch experience tailored to your occasion.</p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/boho-modal.jpg" alt="..." />
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/boho-wine-modal.jpg" alt="..." />
                                 <p>Whether you are having a get together with the girls, a bash for the Bachelorette, or an intimate gathering. We will put together an eye-catching brunch with mouth watering offerings. Customize this party with a Boho or vineyard feel right in your backyard.  Just sit back and relax, as the constant flow of Prosecco and Bellini grace your gathering while you relax and enjoy.</p>
